cars.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars
spec:
  selector:
    matchLabels:
      app: cars
  replicas: 5
  template:
    metadata:
      labels:
        app: cars
    spec:
      containers:
        - name: cars
          image: "car-service:v5"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cars
spec:
  selector:
    app: cars
  ports:
  - protocol: TCP
    port: 1234
    targetPort: 80
  type: LoadBalancer
