friends.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friends
spec:
  selector:
    matchLabels:
      app: friends
  replicas: 1
  template:
    metadata:
      labels:
        app: friends
    spec:
      containers:
        - name: friends
          image: "friend-service:v6"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: friends-service
spec:
  selector:
    app: friends
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 80
  type: ClusterIP
